--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google</title>
+    <title>Google!</title>
 </head>
-<body>
-    
+<body bgcolor="#FFFFFF">
+    <div>
+        <div style="padding: 200; width: auto; height: auto;"><img src="images/google.jpg" alt="google!" ></div>
+        <div></div>
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
 </body>
 </html>
