--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body bgcolor="#FFFFFF">
     <div>
-        <div style="padding: 200; width: auto; height: auto;"><img src="images/google.jpg" alt="google!" ></div>
+        <div style="padding-left: 500px;"><img src="images/google.jpg" alt="google!" ></div>
         <div></div>
         <div>
             <div></div>
