--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body bgcolor="#FFFFFF">
     <div>
         <div style="padding-left: 500px;"><img src="images/google.jpg" alt="google!" ></div>
-        <div></div>
+        <div id="search"></div>
         <div>
             <div></div>
             <div></div>
