--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body bgcolor="#FFFFFF">
     <div>
-        <div style="padding-left: 500px;"><img src="images/google.jpg" alt="google!" ></div>
-        <div id="search"></div>
+        <div style="padding-left: 500px; float: left;"><img src="images/google.jpg" alt="google!" ></div>
+        <div style="float: left; background-color: darkgray;">
+            <div><p></p></div>
+        </div>
         <div>
             <div></div>
             <div></div>
