--- a/index.html
+++ b/index.html
@@ -4,19 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="google!.css">
     <title>Google!</title>
 </head>
 <body bgcolor="#FFFFFF">
-    <div>
-        <div style="padding-left: 500px; float: left;"><img src="images/google.jpg" alt="google!" ></div>
-        <div style="float: left; background-color: darkgray;">
-            <div><p></p></div>
-        </div>
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>
+    
 </body>
 </html>
