--- a/index.html
+++ b/index.html
@@ -36,9 +36,16 @@
                         </a></font> 
                     </div>
                 </td>
-                <td align="right" bgcolor="#62B3AA">
+                <td bgcolor="#62B3AA">
                     <div class="sag">
-                        
+                        <font size="-1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            Get Google! <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;updates monthly: <br>
+                            <input type="hidden" name="listname" value="google-friends">
+                            <input type="text" name="emailaddr" value="your e-mail"> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <input type="submit" name="SubmitAction" value="Subscribe"> 
+                            &nbsp;
+                            <font size="-1"><a href="https://web.archive.org/web/19981202230410/http://www.findmail.com/list/google-friends/">Archive</a></font>      
+                            </font>
                     </div>
                 </td>
             </tr>
